adding custom widgets

--- a/layouts/layout.pug
+++ b/layouts/layout.pug
@@ -26,5 +26,6 @@ html
 			p Copyright &copy; 2018
 
 		script(src='/js/LayoutEditor.js')
-		script(src='https://raw.githubusercontent.com/stephenwike/SlideShowWheelWidget/master/boot.js')
+		script(type='text/javascript' src='/widgets/CustomAlert/myAlerts.js')
+		script(type='text/javascript' src='/widgets/WheelSlideshow/WheelSlideshow.js')
 		
