--- a/layouts/home.pug
+++ b/layouts/home.pug
@@ -9,5 +9,5 @@ block content
 				input.slider(id="SlideshowRadius" type="range" min="1" max="100" value="50")
 	
 	#RightMainContentPanel
-	
-		canvas(id="SlideShowWheelCanvas" onMouseMove="GetMousePosition(event)") Your browser does not support the HTML5 canvas tag.
+			
+		canvas(id="slideshow-wheel-widget-container" onMouseMove="GetMousePosition(event)") Your browser does not support the HTML5 canvas tag.
