--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,6 +5,7 @@
 		<link rel='stylesheet' href='/css/HeaderStyles.css'>
 		<link rel='stylesheet' href='/css/HomeStyles.css'>
 		<link rel='stylesheet' href='/css/ProjectsStyles.css'>
+		<link rel='stylesheet' href='/css/ProjectStyles.css'>
 		<link rel='stylesheet' href='/css/Footer.css'>
 		<link rel='stylesheet' href='/css/FireShellClasses.css'>
 		
@@ -14,7 +15,7 @@
 		<div id="MaintenanceBanner">
 			<center>
 				<h1>Website Under Maintenance</h1>
-				<h2>Explore the experimental elements found here at FireShell Studio!</h2>
+				<p>Explore the experimental elements found here at FireShell Studio!</p>
 			</center>
 		</div>
 		<div id="NavigationBar" class="NavBar">
@@ -28,7 +29,7 @@
 			{{{ body }}}
 		</div>
 		<footer>
-			<p>Copyright &copy; 2018</p>
+			<center><p>Copyright &copy; 2018 -- Website Developed By: Stephen Wike</p></center>
 		</footer>
 	</body>
 </html>
