Project page styles and start of projects content

--- a/public/css/HomeStyles.css
+++ b/public/css/HomeStyles.css
@@ -1,6 +1,9 @@
 body {
+	
     background-image: url("/img/clockwork.gif");
     background-repeat: repeat;
+	padding: 0px;
+	margin: 15px;
 }
 
 #MainContent
