--- a/views/projects/GraspLearning.hbs
+++ b/views/projects/GraspLearning.hbs
@@ -1,37 +1,34 @@
 <div id="projectDiv">
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
-	<center><h1>Grasp Learning</h1></center>
+	<div id="projectContainer">
+		<div class="ProjectHeader">
+			<h1>Grasp Learning Kiosk Animation</h1>
+		</div>
+		<div class="ProjectBlock">
+			<img class="med_img_float_right" src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+			<p>The project was intended to replace the kiosk animation with a 3D animated video with more dynamic behavior.</p>
+		</div>
+		
+		<div class="ProjectBlock">
+			<figure class="med_img_float_right">
+				<img src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+				<figcaption>This is a figcaption. This is a figcaption. This is a figcaption. This is a figcaption.</figcaption>
+			</figure>
+			<p>The project was intended to replace the kiosk animation with a 3D animated video with more dynamic behavior.</p>
+		</div>
+		
+		<div class="ProjectBlock">
+			<center>
+			<img class="med_img_line" src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+			<img class="med_img_line" src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+			<img class="med_img_line" src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+			<img class="med_img_line" src="/img/projects/grasp/grasp_learning_logo.jpg" width="200"/>
+			</center>
+			<p>The project was intended to replace the kiosk animation with a 3D animated video with more dynamic behavior.</p>
+		</div>
+		
+		<div class="ProjectReferences">
+			<p>Their website seems to be down at the moment, but you can get more information about them from this link</p>
+			<a href="http://www.alperjcc.org/childrenfamily/grasp-learning/"><p>http://www.alperjcc.org/childrenfamily/grasp-learning/</p></a>
+		</div>
+	</div>
 </div>
