--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -12,12 +12,12 @@
 	</head>
 	<body>
 		<script type='text/javascript' src='/widgets/CustomAlert/myAlerts.js'></script>
-		<div id="MaintenanceBanner">
+		<!--<div id="MaintenanceBanner">
 			<center>
 				<h1>Website Under Maintenance</h1>
 				<p>Explore the experimental elements found here at FireShell Studio!</p>
 			</center>
-		</div>
+		</div>-->
 		<div id="NavigationBar" class="NavBar">
 			<a class="active" href="/">  Home  </a>
 			<a href="/Projects">Projects</a>
