--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -4,15 +4,17 @@
 		onmousemove="getBumperBubblesMousePosition(event)" 
 		onclick="getBumperBubblesClickedElement(event)">
 		
-		<img src="img/slide_animation_01.png"    alt="/Projects/GraspLearning"></img>
-		<img src="img/slide_animation_02.png"    alt="/Projects/JoomlaAnimation"></img>
-		<img src="img/slide_animation_03.png"    alt="/Projects/AlienAnimation"></img>
-		<img src="img/slide_concept_01.png"      alt="/Projects/ConceptSketches"></img>
-		<img src="img/slide_illustration_01.png" alt="/Projects/WebGraphHeaders"></img>
-		<img src="img/slide_illustration_02.png" alt="/Projects/EconomicEntityGraphic"></img>
-		<img src="img/slide_logo_01.png"         alt="/Projects/AvestaFund"></img>
-		<img src="img/slide_video_01.png"        alt="/Projects/ProteinBarVideo"></img>
-		<img src="img/slide_video_02.png"        alt="/Projects/ProteinBarVideo"></img>
+		<img src="img/slide_animation_01.png"                          alt="/Projects/GraspLearning"></img>
+		<img src="img/slide_animation_02.png"                          alt="/Projects/JoomlaAnimation"></img>
+		<img src="img/slide_animation_03.png"                          alt="/Projects/AlienAnimation"></img>
+		<img src="img/projects/concepts/techLabLandingPageConcept.png" alt="/Projects/ConceptSketches"></img>
+		<img src="img/slide_illustration_01.png"                       alt="/Projects/WebGraphHeaders"></img>
+		<img src="img/slide_illustration_02.png"                       alt="/Projects/EconomicEntityGraphic"></img>
+		<img src="img/slide_logo_01.png"                               alt="/Projects/AvestaFund"></img>
+		<img src="img/slide_video_01.png"                              alt="/Projects/ProteinBarVideo"></img>
+		<img src="img/slide_video_02.png"                              alt="/Projects/ProteinBarVideo"></img>
+		<img src="img/projects/squibble/Wike_Squibble.jpg"             alt="/Projects/SquibbleIllustration"></img>
+		<img src="img/projects/lensmodels/lenses.png"                  alt="/Projects/LensModels"></img>
 	</canvas>
 
 </div>
