--- a/views/projects/AvestaFund.hbs
+++ b/views/projects/AvestaFund.hbs
@@ -1,37 +1,60 @@
 <div id="projectDiv">
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
-	<center><h1>AVESTA FUND</h1></center>
+	<div id="projectContainer">
+		
+		<div class="ProjectBlock">
+			<div class="ProjectHeader">
+				<h1>Avesta Fund Logo Design</h1>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectHighlight">
+				<center><img class="lrg_img_line" src="/img/projects/avestafund/AvestaFund_alt6.png"/></center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>The project was to design a logo for Avesta Fund that included certain required visual elements that the owner felt best personified the company.  Below are some examples of images provided to direct the logo design process.
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/avestafund/bonfire1.JPG"/>
+					<img class="small_img_line" src="/img/projects/avestafund/column.jpg"/>
+					<img class="small_img_line" src="/img/projects/avestafund/Farvahar6.jpg"/>
+					<img class="small_img_line" src="/img/projects/avestafund/wingedlion4.jpg"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>This logo went through an iterative design process and the quality increased with each alteration.  The images show each of the major iteration of the image before the logo was finally approved.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt1.png"/>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt2.png"/>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt3.png"/>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt4.png"/>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt5.png"/>
+					<img class="small_img_line" src="/img/projects/avestafund/AvestaFund_alt6.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectReferences">
+				<h2>References</h2>
+				<p>Their are no references for this project.</p>
+			</div>
+		</div>
+		
+	</div>
 </div>
