--- a/views/projects/ConceptSketches.hbs
+++ b/views/projects/ConceptSketches.hbs
@@ -1,37 +1,61 @@
 <div id="projectDiv">
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
-	<center><h1>CONCEPT SKETCHES</h1></center>
+	<div id="projectContainer">
+		<div class="ProjectBlock">
+			<div class="ProjectHeader">
+				<h1>Concept Sketches</h1>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>Concept sketches are so important to any good project that I've decided to devote an entire page to concept sketches that never made it into a project.  
+				These include concept sketches that were part of a project but were never used for that project.</p>
+			</div>		
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<div class="ProjectFloater">
+					<figure class="fig_float_right">
+						<a href="/img/projects/concepts/techLabLandingPageConcept.png">
+							<img class="small_img_line" src="/img/projects/concepts/techLabLandingPageConcept.png"/>
+						</a>
+						<figcaption>Interactive Website Concept.</figcaption>
+					</figure>
+					<p>This sketch was the concept art for the landing site of an interactive web site.  
+					The intention was to create all the components in 3D, render the entire seen (maybe with some animations), and build an interactive interface above the image.
+					This project had an experimental start were the major forms of the scene were built.  Unfortunately, after a few hours of work, the 3D modeling application crashed
+					and the recover file was corrupt.  Moral of the story is save and save often.  Not a bad idea to iterate your save either.</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>Here's a senior thesis 3D Animated short film titled the Ninety-Nines and although it was a terribly incoherent re-appropriation of history involving Amelia Earhart, Dr. Joseph Mengela, and Nikola Tesla, 
+				this is a collection of concept images that were never used.  Link to video provided below.</p>
+				<center>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/internalvenom.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/mengelegrabsant.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/noonancaptured.png"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/spotted.png"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/noonanintimidated.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/notetrack.png"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/mengeleatadistance.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/gardnershootsherself.png"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/gardnerheld.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/noonanafraidofinjection.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/mengelelight.jpg"/>
+					<img class="small_img_line" src="/img/projects/concepts/ninetynines/mengelegrabsneedle.jpg"/>
+				</center>
+			</div>		
+		</div>
+
+		<div class="ProjectBlock">
+			<div class="ProjectReferences">
+				<h2>References</h2>
+				<p> * Here is a link the Ninety-Nines video.  <a href="https://vimeo.com/66422125"> https://vimeo.com/66422125 </a></p>
+			</div>
+		</div>
+	</div>
 </div>
