--- a/views/projects/JoomlaAnimation.hbs
+++ b/views/projects/JoomlaAnimation.hbs
@@ -1,37 +1,162 @@
 <div id="projectDiv">
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
-	<center><h1>JOOMLA ANIMATION</h1></center>
+	<div id="projectContainer">
+		<div class="ProjectBlock">
+			<div class="ProjectHeader">
+				<h1>Joomla Web Development Animated Video</h1>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectHighlight">
+				<center><h1>VIMEO LINK PENDING</h1></center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>This animated cartoon cheetah video was made for a 'Quick Joomla Website Design' service.  
+				The client wanted an animated cartoon cheetah to promote that service.  The project was short
+				term and tight budgeted but several strategies were used to guarantee a better quality at
+				small expense.  Just like any project, it starts with concept art as seen below.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/concept/img001.jpg"/>
+					<img class="small_img_line" src="/img/projects/joomla/concept/img002.jpg"/>
+					<img class="small_img_line" src="/img/projects/joomla/concept/img003.jpg"/>
+					<img class="small_img_line" src="/img/projects/joomla/concept/img004.jpg"/>
+					<img class="small_img_line" src="/img/projects/joomla/concept/img005.jpg"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>After juggling a few sketches.  Two models were proposed.  The project move forward with the ladder of the two.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/concept/characterSheet1.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/concept/characterSheet2.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<div class="ProjectFloater">
+					<figure class="fig_float_right">
+						<img class="small_img_line" src="/img/projects/joomla/face.png"/>
+						<figcaption>Face Overlay from upper jaw to top of head.</figcaption>
+					</figure>
+					<p>The characters body and head were separately animated objects.  
+					Details like spots and face stripes were added to the model using an overlay effect.  
+					An example can be seen on the right.</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>The next step was to create the key poses of the character, there were 7 key posses.  
+				The key posses can be found below.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p1.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p2.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p3.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p4.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p5.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p6.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/keys/p7.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>Now that the key posses were rendered, it's time animate the frames in between.  
+				First, assets needed to be created to make the animation.  
+				Two additional sets of eyelids were created to allow the character to blink,
+				one closed and one half closed.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/eyes/BIGeyes_halved.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/eyes/BIGeyes_closed.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>Another challenge was to get the character to talk.  
+				This involved using a collection of visemes illustrated specifically for this character.
+				Because the character turns its head, visemes had to be created for both the front and side view.
+				Luckily, the side view has a smaller mouth and has less dialogue, so the were less visemes required to create.
+				The visemes created for the character are found below.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/A.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/ah.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/E.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/el.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/er.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/es.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/f.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/front/o_w.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<center>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/side/A.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/side/el.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/side/er.png"/>
+					<img class="small_img_line" src="/img/projects/joomla/visemes/side/o_w.png"/>
+				</center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<div class="ProjectFloater">
+					<figure class="fig_float_right">
+						<img class="small_img_line" src="/img/projects/joomla/tail/tail_11.png"/>
+						<figcaption>One frame from animated tail.</figcaption>
+					</figure>
+					<p>After the animation was completed, the client asked to add a tail swooshing behind the character.
+					The tail was first created in outlines, and put behing the character.
+					Since the tail was behind the character, only parts of it were ever visible.
+					The parts that were visible were painted in as presented to the right.</p>
+				</div>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectReferences">
+				<h2>References</h2>
+				<p>Their are no references for this project.</p>
+			</div>
+		</div>
+	</div>
 </div>
