--- a/views/projects/ProteinBarVideo.hbs
+++ b/views/projects/ProteinBarVideo.hbs
@@ -1,37 +1,28 @@
 <div id="projectDiv">
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
-	<center><h1>PROTEIN BAR VIDEO</h1></center>
+	<div id="projectContainer">
+		<div class="ProjectBlock">
+			<div class="ProjectHeader">
+				<h1>Protein Bar Spirit Video Project</h1>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectHighlight">
+				<center><h1>VIMEO LINK PENDING</h1></center>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectContent">
+				<p>This project was a video and fx animation project for Protein Bar&trade;, a health-focused fast-food chain based out of Chicago.  They needed something to show for their company conference highlighting team spirit.  The project was given a deadline of one week and the were very few work hours available, however the video was filmed, animated, and produced in time for the conference.  Fortunately, there was a surprising amount of positive feedback.</p>
+			</div>
+		</div>
+		
+		<div class="ProjectBlock">
+			<div class="ProjectReferences">
+				<h2>References</h2>
+				<p>Their are no references for this project.</p>
+			</div>
+		</div>
+	</div>
 </div>
