--- a/public/css/FireShellClasses.css
+++ b/public/css/FireShellClasses.css
@@ -1,3 +1,9 @@
+* {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
 .slider {
     -webkit-appearance: none;
     width: 100%;
