Changes to Home Page layout and layout editor

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,26 +1,12 @@
-<div id="LeftMainContentPanel">
-
-	<div id="WebsiteHomeSummary">
-	
-	</div>
-
-	<div id="WheelInterface">
-		<form id="WheelInterfaceForm">
-			<input class="slider" id="SubDivisions"    type="range" min="1" max="100" value="50">
-			<input class="slider" id="SlideshowRadius" type="range" min="1" max="100" value="50">
-		</form>
-	</div>
-</div>
-
 <div id="RightMainContentPanel">
 		
-	<canvas id="slideshow-wheel-widget-container" width="800" 
-		height="800" onMouseMove="GetWheelSlideshowMousePosition(event)" 
+	<canvas id="slideshow-wheel-widget-container" width="600" 
+		height="600" onMouseMove="GetWheelSlideshowMousePosition(event)" 
 		value='
 		{
-		"CenterX": 400,	
-		"CenterY": 400, 
-		"WheelRadius": 400, 
+		"CenterX": 600,	
+		"CenterY": 600, 
+		"WheelRadius": 600, 
 		"WheelEndTheta": 1.57, 
 		"IsRounded": true, 
 		"GridMode": false, 
@@ -41,6 +27,20 @@
 		<img alt="Animation" src="img/slide_animation_03.png"></img>
 	</div>
 	<button onclick="button_click()">Click Me!</button>
+</div>
+
+<div id="LeftMainContentPanel">
+
+	<div id="WebsiteHomeSummary">
+		<p>Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other</p>
+	</div>
+
+	<div id="WheelInterface">
+		<form id="WheelInterfaceForm">
+			<input class="slider" id="SubDivisions"    type="range" min="1" max="100" value="50">
+			<input class="slider" id="SlideshowRadius" type="range" min="1" max="100" value="50">
+		</form>
+	</div>
 </div>
 
 <script type='text/javascript' src='js/LayoutEditor.js'></script>
