--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>FireShell Studio</title>
+		<link rel='stylesheet' href='/css/FireShellStyles.css'>
 		<link rel='stylesheet' href='/css/HeaderStyles.css'>
 		<link rel='stylesheet' href='/css/HomeStyles.css'>
 		<link rel='stylesheet' href='/css/ProjectsStyles.css'>
 		<link rel='stylesheet' href='/css/ProjectStyles.css'>
 		<link rel='stylesheet' href='/css/Footer.css'>
-		<link rel='stylesheet' href='/css/FireShellClasses.css'>
 		
 	</head>
 	<body>
