--- a/public/css/HomeStyles.css
+++ b/public/css/HomeStyles.css
@@ -1,97 +1,75 @@
-body {
-	
-    background-image: url("/img/clockwork.gif");
-    background-repeat: repeat;
-	padding: 0px;
-	margin: 15px;
-}
-
-#MainContent
-{
-	position:absolute;
-	left:0;
-	right:0;
-	top:45px;;
-	bottom:45px;
-}
-
-#MainContentPanel
-{
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background-color:rgba(255,0,0,0.8);
-}
-
-#MaintenanceBanner
-{
-	position:fixed;
-	top:75px;
-	left:20%;
-	right:20%;
-	z-index:2;
-	background-color:rgba(50,0,0,0.95);
-	border: 6px solid #000;
-	color:#FFF;
-}
-
-#MaintenanceBanner h1
-{
-	font-size: 27px;
-}
-
-#MaintenanceBanner p
-{
-	font-size: 16px;
-	color:#DDE;
-}
-
 #RightMainContentPanel
 {
-	position:absolute;
-	right:0;
-	top:0;
-	bottom:0;
-	background-color:rgba(0,0,0,0.8);
+	background-color:rgba(0,255,0,0.3);
 }
 
 #LeftMainContentPanel
 {
-	position:absolute;
-	top:0;
-	left:0;
-	bottom:0;
-	background-color:rgba(115,115,115,0.8);
+	display:block;
+	background-color:rgba(0,0,255,0.5);
 }
 
 #WebsiteHomeSummary
 {
-	position:absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background-color:rgba(0,0,0,0.8);
+}
+
+#WheelInterface
+{
+	width: 100%;
 }
 
 #WheelInterfaceForm
 {
-	position:absolute;
-	bottom:0;
 	margin:25px;
-	Padding:25px;
-	background-color:#333;
+	background-color:#444;
 }
 
 #SlideShowWheelCanvas
 {
-	position:absolute;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
 	background-color:rgba(0,0,0,1);
 }
 
+.fixedBtm
+{
+	position: fixed;
+	bottom: 45px;
+	right: 10px;
+}
+
+.slider {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+.center {
+    text-align: center;
+}
